@@ -20,15 +20,9 @@
 package org.elasticsearch.painless;
 
 import org.elasticsearch.painless.ScriptClassInfo.MethodArgument;
-import org.elasticsearch.painless.lookup.PainlessLookup;
 import org.elasticsearch.painless.lookup.PainlessLookupUtility;
 
-import java.lang.invoke.MethodType;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -37,33 +31,9 @@ import java.util.stream.Collectors;
 import static org.elasticsearch.painless.lookup.PainlessLookupUtility.typeToJavaType;
 
 /**
- * Tracks user defined methods and variables across compilation phases.
+ * Tracks user defined variables across compilation phases.
  */
 public final class Locals {
-
-    /**
-     * Constructs a local method key used to lookup local methods from a painless class.
-     */
-    public static String buildLocalMethodKey(String methodName, int methodArity) {
-        return methodName + "/" + methodArity;
-    }
-
-    /**
-     * Stores information about methods directly callable on the generated script class.
-     */
-    public static class LocalMethod {
-        public final String name;
-        public final Class<?> returnType;
-        public final List<Class<?>> typeParameters;
-        public final MethodType methodType;
-
-        public LocalMethod(String name, Class<?> returnType, List<Class<?>> typeParameters, MethodType methodType) {
-            this.name = name;
-            this.returnType = returnType;
-            this.typeParameters = typeParameters;
-            this.methodType = methodType;
-        }
-    }
 
     /** Reserved word: loop counter */
     public static final String LOOP   = "#loop";
@@ -71,16 +41,11 @@ public final class Locals {
     public static final String THIS   = "#this";
 
     /** Set of reserved keywords. */
-    public static final Set<String> KEYWORDS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
-        THIS, LOOP
-    )));
+    public static final Set<String> KEYWORDS = Set.of(THIS, LOOP);
 
     /** Creates a new local variable scope (e.g. loop) inside the current scope */
     public static Locals newLocalScope(Locals currentScope) {
-        Locals locals = new Locals(currentScope);
-        locals.methods = currentScope.methods;
-
-        return locals;
+        return new Locals(currentScope);
     }
 
     /**
@@ -90,11 +55,8 @@ public final class Locals {
      */
     public static Locals newLambdaScope(Locals programScope, String name, Class<?> returnType, List<Parameter> parameters,
                                         int captureCount, int maxLoopCounter) {
-        Locals locals = new Locals(programScope, programScope.painlessLookup, returnType, KEYWORDS);
-        locals.methods = programScope.methods;
+        Locals locals = new Locals(programScope, returnType, KEYWORDS);
         List<Class<?>> typeParameters = parameters.stream().map(parameter -> typeToJavaType(parameter.clazz)).collect(Collectors.toList());
-        locals.methods.put(buildLocalMethodKey(name, parameters.size()), new LocalMethod(name, returnType, typeParameters,
-                MethodType.methodType(typeToJavaType(returnType), typeParameters)));
         for (int i = 0; i < parameters.size(); i++) {
             Parameter parameter = parameters.get(i);
             // TODO: allow non-captures to be r/w:
@@ -113,8 +75,7 @@ public final class Locals {
 
     /** Creates a new function scope inside the current scope */
     public static Locals newFunctionScope(Locals programScope, Class<?> returnType, List<Parameter> parameters, int maxLoopCounter) {
-        Locals locals = new Locals(programScope, programScope.painlessLookup, returnType, KEYWORDS);
-        locals.methods = programScope.methods;
+        Locals locals = new Locals(programScope, returnType, KEYWORDS);
         for (Parameter parameter : parameters) {
             locals.addVariable(parameter.location, parameter.clazz, parameter.name, false);
         }
@@ -127,9 +88,7 @@ public final class Locals {
 
     /** Creates a new main method scope */
     public static Locals newMainMethodScope(ScriptClassInfo scriptClassInfo, Locals programScope, int maxLoopCounter) {
-        Locals locals = new Locals(
-            programScope, programScope.painlessLookup, scriptClassInfo.getExecuteMethodReturnType(), KEYWORDS);
-        locals.methods = programScope.methods;
+        Locals locals = new Locals(programScope, scriptClassInfo.getExecuteMethodReturnType(), KEYWORDS);
         // This reference. Internal use only.
         locals.defineVariable(null, Object.class, THIS, true);
 
@@ -145,14 +104,9 @@ public final class Locals {
         return locals;
     }
 
-    /** Creates a new program scope: the list of methods. It is the parent for all methods */
-    public static Locals newProgramScope(PainlessLookup painlessLookup, Collection<LocalMethod> methods) {
-        Locals locals = new Locals(null, painlessLookup, null, null);
-        locals.methods = new HashMap<>();
-        for (LocalMethod method : methods) {
-            locals.addMethod(method);
-        }
-        return locals;
+    /** Creates a new program scope as the root of all scopes */
+    public static Locals newProgramScope() {
+        return new Locals(null, null, null);
     }
 
     /** Checks if a variable exists or not, in this scope or any parents. */
@@ -177,11 +131,6 @@ public final class Locals {
             return parent.getVariable(location, name);
         }
         throw location.createError(new IllegalArgumentException("Variable [" + name + "] is not defined."));
-    }
-
-    /** Looks up a method. Returns null if the method does not exist. */
-    public LocalMethod getMethod(String methodName, int methodArity) {
-        return methods.get(buildLocalMethodKey(methodName, methodArity));
     }
 
     /** Creates a new variable. Throws IAE if the variable has already been defined (even in a parent) or reserved. */
@@ -209,15 +158,8 @@ public final class Locals {
         return locals;
     }
 
-    /** Whitelist against which this script is being compiled. */
-    public PainlessLookup getPainlessLookup() {
-        return painlessLookup;
-    }
-
     ///// private impl
 
-    /** Whitelist against which this script is being compiled. */
-    private final PainlessLookup painlessLookup;
     // parent scope
     private final Locals parent;
     // return type of this scope
@@ -228,22 +170,19 @@ public final class Locals {
     private int nextSlotNumber;
     // variable name -> variable
     private Map<String,Variable> variables;
-    // method name+arity -> methods
-    private Map<String,LocalMethod> methods;
 
     /**
      * Create a new Locals
      */
     private Locals(Locals parent) {
-        this(parent, parent.painlessLookup, parent.returnType, parent.keywords);
+        this(parent, parent.returnType, parent.keywords);
     }
 
     /**
      * Create a new Locals with specified return type
      */
-    private Locals(Locals parent, PainlessLookup painlessLookup, Class<?> returnType, Set<String> keywords) {
+    private Locals(Locals parent, Class<?> returnType, Set<String> keywords) {
         this.parent = parent;
-        this.painlessLookup = painlessLookup;
         this.returnType = returnType;
         this.keywords = keywords;
         if (parent == null) {
@@ -266,10 +205,6 @@ public final class Locals {
         return variables.get(name);
     }
 
-    public Map<String, LocalMethod> getMethods() {
-        return Collections.unmodifiableMap(methods);
-    }
-
     /** Defines a variable at this scope internally. */
     private Variable defineVariable(Location location, Class<?> type, String name, boolean readonly) {
         if (variables == null) {
@@ -279,10 +214,6 @@ public final class Locals {
         variables.put(name, variable); // TODO: check result
         nextSlotNumber += MethodWriter.getType(type).getSize();
         return variable;
-    }
-
-    private void addMethod(LocalMethod method) {
-        methods.put(buildLocalMethodKey(method.name, method.typeParameters.size()), method);
     }
 
     private int getNextSlot() {
