@@ -23,7 +23,6 @@ import java.security.BasicPermission;
 import java.security.Permission;
 import java.security.PermissionCollection;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashSet;
 import java.util.Set;
@@ -75,30 +74,30 @@ import java.util.Set;
  */
 public final class ClassPermission extends BasicPermission {
     public static final String STANDARD = "<<STANDARD>>";
+    // jdk classes
     /** Typical set of classes for scripting: basic data types, math, dates, and simple collections */
     // this is the list from the old grovy sandbox impl (+ some things like String, Iterator, etc that were missing)
-    public static final Set<String> STANDARD_CLASSES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
-            // jdk classes
-            java.lang.Boolean.class.getName(),
-            java.lang.Byte.class.getName(),
-            java.lang.Character.class.getName(),
-            java.lang.Double.class.getName(),
-            java.lang.Integer.class.getName(),
-            java.lang.Long.class.getName(),
-            java.lang.Math.class.getName(),
-            java.lang.Object.class.getName(),
-            java.lang.Short.class.getName(),
-            java.lang.String.class.getName(),
+    private static final Set<String> STANDARD_CLASSES = Set.of(
+            Boolean.class.getName(),
+            Byte.class.getName(),
+            Character.class.getName(),
+            Double.class.getName(),
+            Integer.class.getName(),
+            Long.class.getName(),
+            Math.class.getName(),
+            Object.class.getName(),
+            Short.class.getName(),
+            String.class.getName(),
             java.math.BigDecimal.class.getName(),
             java.util.ArrayList.class.getName(),
-            java.util.Arrays.class.getName(),
+            Arrays.class.getName(),
             java.util.Date.class.getName(),
             java.util.HashMap.class.getName(),
-            java.util.HashSet.class.getName(),
+            HashSet.class.getName(),
             java.util.Iterator.class.getName(),
             java.util.List.class.getName(),
             java.util.Map.class.getName(),
-            java.util.Set.class.getName(),
+            Set.class.getName(),
             java.util.UUID.class.getName(),
             // joda-time
             org.joda.time.DateTime.class.getName(),
@@ -106,8 +105,7 @@ public final class ClassPermission extends BasicPermission {
             org.joda.time.DateTimeZone.class.getName(),
             org.joda.time.Instant.class.getName(),
             org.joda.time.ReadableDateTime.class.getName(),
-            org.joda.time.ReadableInstant.class.getName()
-     )));
+            org.joda.time.ReadableInstant.class.getName());
 
     /**
      * Creates a new ClassPermission object.
