@@ -7,7 +7,7 @@ package org.elasticsearch.xpack.core.security.user;
 
 import org.elasticsearch.test.ESTestCase;
 
-import java.util.Collections;
+import java.util.Map;
 
 import static org.hamcrest.Matchers.is;
 
@@ -16,7 +16,7 @@ public class UserTests extends ESTestCase {
     public void testUserToString() {
         User user = new User("u1", "r1");
         assertThat(user.toString(), is("User[username=u1,roles=[r1],fullName=null,email=null,metadata={}]"));
-        user = new User("u1", new String[] { "r1", "r2" }, "user1", "user1@domain.com", Collections.singletonMap("key", "val"), true);
+        user = new User("u1", new String[] { "r1", "r2" }, "user1", "user1@domain.com", Map.of("key", "val"), true);
         assertThat(user.toString(), is("User[username=u1,roles=[r1,r2],fullName=user1,email=user1@domain.com,metadata={key=val}]"));
         user = new User("u1", new String[] {"r1"}, new User("u2", "r2", "r3"));
         assertThat(user.toString(), is("User[username=u1,roles=[r1],fullName=null,email=null,metadata={}," +
